# TREND-Bioinformatics-Pipeline

./: .gitignore  CHANGELOG.md  DASHBOARD_PRD.md  LICENSE  MANUAL.md  README.legacy.md  README.md  REVIEWERS.md
codes/: README.md
dashboard/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/backend/: __init__.py  config.py  main.py  preflight.py
dashboard/backend/oracle/: compare.py  run_example.py
dashboard/backend/pipeline/: cwd_shim.py  error_hints.py  error_hints.yaml  runner.py  steps.yaml
dashboard/backend/provenance/: hashes.py  manifest.py
dashboard/backend/schemas/: _loader.py  alignment_result_normalized.yaml  ovca_sensor_activity_concise.yaml  tcell_activation_responsive.yaml
dashboard/example_data/ovca_pipeline/: README.md
dashboard/example_data/ovca_pipeline/expected/: alignment_result_normalized_in_house_pipeline.csv  alignment_result_unnormalized_in_house_pipeline.csv
dashboard/example_data/ovca_pipeline/inputs/: Lib4_info_tiny.csv  Lib4_tiny.fasta  barcode_key.xlsx
dashboard/example_data/ovca_step9/: README.md
dashboard/example_data/ovca_step9/expected/: ovca_sensor_activity_result_all.csv  ovca_sensor_activity_result_concise.csv
dashboard/example_data/ovca_step9/inputs/: all_enhancer_metadata_111525.csv
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/frontend/src/components/: CancerSelectiveTable.tsx  CompositionPyramid.tsx  ConstructTable.tsx  EnhancerTable.tsx  ExpressionScatterStub.tsx  GlossaryTooltip.tsx  Histogram.tsx  HorizontalFamilyBar.tsx  LibraryFilters.tsx  PpmRankChart.tsx  PwmHistogram.tsx  SelectivityScatter.tsx  SequenceLogo.tsx  StackedBar.tsx  StackedCoverageBar.tsx  StateMachine.tsx  SummaryCard.tsx  WorkflowSchematic.tsx
dashboard/frontend/src/lib/: api.ts  cn.ts
dashboard/frontend/src/pages/: ConstructDetail.tsx  Glossary.tsx  Health.tsx  Home.tsx  Library.tsx  Project.tsx  PwmDetail.tsx  Reproduce.tsx  Results.tsx  Run.tsx  RunExample.tsx
dashboard/frontend/src/styles/: globals.css
dashboard/runs/published_v1/: manifest.json
data/: README.md
pipeline/: README.md  environment.yml  pyproject.toml
pipeline/conda-recipe/: meta.yaml
pipeline/templates/T_cell_activation/: README.md  project.yaml  samplesheet.yaml
pipeline/templates/ovarian_cancer/: README.md  project.yaml  samplesheet.yaml
pipeline/trend/: __init__.py  cli.py  render_step9.py  step9_runner.py
pipeline/trend/templates/r_scripts/: ovarian_cancer.R.template
pipeline/trend/workflow/: Snakefile
pipeline/trend/workflow/envs/: alignment.yaml  python.yaml  r.yaml
pipeline/trend/workflow/profiles/slurm/: config.yaml
project_data/: README.md
references/: README.md  TREND_library_TF_breakdown.md  Table_S1_Lambert_alias_mapping.csv  Table_S2_DAlessio_tissue_system_mapping.csv  all_ENCODE_MotifDb_ppm_no_NA_v1.txt
(+24 files in other folders)
