[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-dashboard"
version = "0.1.0"
description = "Local-first dashboard wrapping the TREND bioinformatics pipeline. Wraps; never rewrites."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "sqlite-utils>=3.36",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
trend-ingest = "backend.library.ingest:main"
trend-dashboard = "backend.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
